# IRCserver

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
data/channels/: jamnik.txt  music.txt
data/channels/list/: channels.txt
data/help/: help.txt
data/users/: users.txt
include/: channel.h  data.h  functions.h  message.h  message_respond.h  server.h  user.h
nbproject/: configurations.xml  project.xml
nbproject/private/: Default.properties  configurations.xml
src/: channel.cpp  data.cpp  functions.cpp  message.cpp  server.cpp  user.cpp
